--- a/src/components/ContactsSection.css
+++ b/src/components/ContactsSection.css
@@ -31,7 +31,7 @@
   align-items: center;
   scroll-snap-align: start;
   scroll-margin-top: 120px;
-  margin-bottom: 80px;
+  margin-bottom: 30px;
 }
 
 @keyframes gradientFlow {
@@ -197,7 +197,7 @@
 
 @media screen and (max-width: 768px) {
   .contacts-section {
-    margin: 15px;
+    margin: 30px;
     height: auto;
     padding: 15px 0;
   }
@@ -254,6 +254,8 @@
 
   .footer-subtext {
     font-size: 0.75em;
+    flex-direction: column;
+    gap: 2px;
   }
 
   .contacts-icons {
